<resources>
    <string name="app_name">漢字音典</string>
    <string name="settings">⚙️設置</string>
    <string name="help">❔幫助</string>
    <string name="about">❕關於</string>
    <string name="info">ℹ️</string>
    <string name="home">🏠</string>
    <string name="favorite">📖生字本</string>
    <string name="dialect_links">🔗方言連結</string>
    <string name="similarity">方言相似度</string>
    <string name="huai_dict">淮語詞典</string>
    <string name="tairu_dict">泰如辭典</string>
    <string name="vear_web">唯二網頁版</string>
    <string name="ayaka_web">綾香網頁版</string>
    <string name="dialects_atlas">方音圖鑑</string>
    <string name="guess_hz">🀄猜字</string>
    <string name="about_message"><![CDATA[%1$s V%2$s<br/>作者：osfans<br/><a href="https://github.com/osfans/MCPDict/releases/tag/latest">最新版</a> <a href="https://github.com/osfans/MCPDict/releases/tag/fonts">字體包</a> <a href="https://mcpdict.sourceforge.io/warnings.txt">字表解析日誌</a> <a href="https://github.com/osfans/MCPDict/actions">自動編譯</a> <a href="https://github.com/osfans/MCPDict/">GitHub</a>]]></string>
    <string name="ok">確定</string>
    <string name="cancel">取消</string>
    <string name="back">返回</string>
    <string name="next">下一步</string>
    <string name="save">保存</string>
    <string name="keep">保留</string>
    <string name="delete">刪除</string>
    <string name="manage">管理</string>
    <string name="export">導出</string>
    <string name="import_">導入</string>
    <string name="clear">淸空</string>
    <string name="overwrite">覆蓋</string>
    <string name="search_hz_hint">輸入一個或多個漢字</string>
    <string name="search_ipa_hint">輸入當前語言中的音節</string>
    <string name="search_dict_hint">輸入繁體或簡體正文</string>
    <string name="search_comment_hint">輸入繁體或簡體註釋</string>
    <string name="search_lang_hint">輸入或選擇語言</string>
    <string name="search_for">查詢內容：</string>
    <string name="search_as">查詢條件：</string>
    <string name="search_options">查詢選項：</string>
    <string name="option_allow_variants">顯示異體字</string>
    <string name="no_matches">未找到符合條件的漢字。</string>
    <string name="toggle_fullscreen">切換到精簡界面</string>
    <string name="pref_key_allow_variants">ALLOW_VARIANTS</string>
    <string name="copy_readings">複製“%s”字的所有讀音</string>
    <string name="copy_lang_current_reading">複製該語言中“%s”字的讀音</string>
    <string name="copy_lang_all_readings">複製該語言中“%s”字的所有讀音</string>
    <string name="copy_hz">複製“%s”字</string>
    <string name="dict_links">去在線詞典查詢“%s”字</string>
    <string name="one_dict_links">去“%2$s”查詢“%1$s”字</string>
    <string name="search_homophone">查詢該語言中“%s”的同音字</string>
    <string name="share_readings">分享“%s”字的所有讀音</string>
    <string name="goto_info">查看“%s”的詳細信息</string>
    <string name="add_to_custom_language">將該語言加入自選語言</string>
    <string name="add_to_custom_language_done">“%s”已加入自選語言</string>
    <string name="rm_from_custom_language">將該語言移出自選語言</string>
    <string name="rm_from_custom_language_done">“%s”已从自選語言移出</string>
    <string name="copy_done">已複製到剪貼板</string>
    <string name="search_as_ja_any">日語（任意讀音）</string>
    <string name="favorite_total">當前生字本中共有 %d 個生字</string>
    <string name="favorite_empty">當前生字本中沒有生字。\n\n在“字典”頁面，點擊查詢結果右上角的五角星，可以把相應的漢字加入生字本中。\n\n若您備份過生字本，可以按此導入。</string>
    <string name="favorite_add">把“%s”字加入生字本</string>
    <string name="favorite_add_hint">寫點筆記吧…</string>
    <string name="favorite_add_done">已將“%s”字加入生字本</string>
    <string name="favorite_view">查看“%s”字的筆記</string>
    <string name="favorite_edit">編輯“%s”字的筆記</string>
    <string name="favorite_edit_2lines">編輯“%s”字\n的筆記</string>
    <string name="favorite_view_or_edit">查看“%s”字的筆記</string>
    <string name="favorite_edit_done">已保存“%s”字的筆記</string>
    <string name="favorite_delete">把“%s”字從生字本中刪除</string>
    <string name="favorite_delete_2lines">從生字本中\n刪除“%s”字</string>
    <string name="favorite_delete_confirm">確定把“%s”字從生字本中刪除嗎？刪除後無法恢復！</string>
    <string name="favorite_delete_no_confirm">1小時內不再提示</string>
    <string name="favorite_delete_done">已將“%s”字從生字本中刪除</string>
    <string name="favorite_export">把生字本導出到文件</string>
    <string name="favorite_export_done">已將生字本導出到備份文件 %s。\n\n今後，您可以將此文件複製到其它手機上的同一位置，並導入進那臺手機上的生字本。</string>
    <string name="favorite_export_overwrite">生字本備份文件 %1$s 已存在，最後修改於 %2$s。\n\n要覆蓋它嗎？</string>
    <string name="favorite_import">把文件導入到生字本</string>
    <string name="favorite_import_file_not_found">未找到生字本備份文件 %s。\n\n請確認文件存在，再試一次。</string>
    <string name="favorite_import_read_fail">讀取生字本備份文件 %s 失敗。文件可能已損壞。</string>
    <string name="favorite_import_empty_file">找到了生字本備份文件 %s，但其中並不含有生字。</string>
    <string name="favorite_import_detail">找到了生字本備份文件 %1$s，其中含有 %2$d 條生字。\n\n按“導入”按鈕可將這些生字導入進生字本。</string>
    <string name="favorite_import_detail_select_mode">找到了生字本備份文件 %1$s，其中含有 %2$d 條生字。\n\n在下一步，請仔細閱讀並選擇一種導入模式。</string>
    <string name="favorite_import_select_mode">選擇導入模式</string>
    <string-array name="favorite_import_modes">
        <item>捨棄生字本原有內容，僅保留導入的內容。</item>
        <item>保留生字本原有內容，將導入的內容按時間戳與原有內容混排。</item>
        <item>保留生字本原有內容，將導入內容的時間戳修改爲當前時間，導入的內容將排在原有內容之前。</item>
    </string-array>
    <string name="favorite_import_done">已將備份文件 %s 的內容導入進生字本。\n\n是否刪除備份文件？</string>
    <string name="favorite_import_delete_backup_done">已刪除生字本備份文件。</string>
    <string name="favorite_import_delete_backup_fail">刪除失敗，文件仍存在</string>
    <string name="favorite_clear">淸空生字本</string>
    <string name="favorite_clear_confirm">確定淸空生字本嗎？淸空後無法恢復！</string>
    <string name="favorite_clear_done">已淸空生字本</string>
    <string name="crash">操作失敗</string>
    <string name="crash_saved">已將錯誤信息保存至文件 %s。\n\n請與作者 Maigo (maigoakisame@gmail.com) 聯繫。</string>
    <string name="crash_unsaved">保存錯誤信息也失敗了 (T_T)\n\n有可能是您的手機沒有SD卡，SD卡已滿，或無法寫入。</string>
    <string name="pref_key_favorite_delete_no_confirm_expiry">FAVORITE_DELETE_NO_CONFIRM_EXPIRY</string>
    <string name="ipa">音標</string>
    <string name="pref_key_mc_display">MC_DISPLAYS</string>
    <string name="pref_title_mc_display">廣韻拼音、擬音及音韻地位描述格式</string>
    <string-array name="pref_entries_mc_display">
        <item>切韻拼音</item>
        <item>白一平轉寫</item>
        <item>古韻羅馬字</item>
        <item>有女羅馬字</item>
        <item>髙本漢擬音</item>
        <item>王力（1957）擬音</item>
        <item>王力（1985）擬音</item>
        <item>李榮擬音</item>
        <item>邵榮芬擬音</item>
        <item>蒲立本擬音</item>
        <item>鄭張尙芳擬音</item>
        <item>潘悟雲（2000）擬音</item>
        <item>潘悟雲（2013）擬音</item>
        <item>潘悟雲（2023）擬音</item>
        <item>unt（2026）擬音，RTR方案</item>
        <item>unt（2026）擬音，ATR方案</item>
        <item>unt通俗擬音</item>
        <item>msoeg擬音</item>
        <item>切韻音系描述</item>
        <item>攝</item>
        <item>方音字彙描述</item>
        <item>廣韻韻目原貌</item>
        <item>折合平水韻目原貌</item>
        <item>反切</item>
    </string-array>
    <string-array name="pref_values_mc_display">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>100</item>
        <item>101</item>
        <item>102</item>
        <item>103</item>
        <item>104</item>
        <item>105</item>
        <item>106</item>
        <item>107</item>
        <item>108</item>
        <item>109</item>
        <item>110</item>
        <item>111</item>
        <item>112</item>
        <item>113</item>
        <item>200</item>
        <item>201</item>
        <item>202</item>
        <item>300</item>
        <item>301</item>
        <item>400</item>
    </string-array>
    <string-array name="pref_default_values_mc_display">
        <item>0</item>
        <item>109</item>
        <item>110</item>
        <item>200</item>
        <item>201</item>
        <item>300</item>
        <item>400</item>
    </string-array>
    <string name="pref_key_zt_display">ZT_DISPLAY</string>
    <string name="pref_title_zt_display">中唐（韻圖）擬音</string>
    <string-array name="pref_entries_zt_display">
        <item>unt</item>
        <item>辛克</item>
    </string-array>
    <string-array name="pref_values_zt_display">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string-array name="pref_default_values_zt_display">
        <item>0</item>
    </string-array>
    <string name="pref_key_zyyy_display">ZYYY_DISPLAY</string>
    <string name="pref_title_zyyy_display">中原音韻擬音</string>
    <string-array name="pref_entries_zyyy_display">
        <item>楊耐思</item>
        <item>寧繼福</item>
        <item>薛鳳生（音位形式）</item>
        <item>unt（音位形式）</item>
        <item>unt</item>
    </string-array>
    <string-array name="pref_values_zyyy_display">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="pref_key_dgy_display">DGY_DISPLAY</string>
    <string name="pref_title_dgy_display">東干甘肅話</string>
    <string name="pref_key_mandarin_display">MANDARIN_DISPLAY</string>
    <string name="pref_title_mandarin_display">普通話</string>
    <string name="pref_key_cantonese_romanization">CANTONESE_ROMANIZATION</string>
    <string name="pref_title_cantonese_romanization">香港粵語拼音（用於輸入和顯示）</string>
    <string name="pref_key_minnan_display">MINNAN_DISPLAY</string>
    <string name="pref_title_minnan_display">臺灣閩南語</string>
    <string name="pref_key_korean_display">KOREAN_DISPLAY</string>
    <string name="pref_title_korean_display">朝鮮語</string>
    <string name="pref_key_vietnamese_tone_position">VIETNAMESE_TONE_POSITION</string>
    <string name="pref_title_vietnamese_tone_position">越南語</string>
    <string name="pref_key_japanese_display">JAPANESE_DISPLAY</string>
    <string name="pref_title_japanese_display">日語</string>
    <string name="pref_key_tone_display">TONE_DISPLAY</string>
    <string name="pref_title_tone_display">調類</string>
    <string name="pref_key_tone_value_display">TONE_VALUE_DISPLAY</string>
    <string name="pref_title_tone_value_display">調值</string>
    <string name="pref_key_custom_languages">CUSTOM_LANGUAGES</string>
    <string name="custom_title">自定標題</string>
    <string name="pref_key_custom_title">CUSTOM_TITLE</string>
    <string name="language">語言</string>
    <string name="appearance">外觀</string>
    <string name="pref_key_locale">LOCALE</string>
    <string name="map">🌏地圖</string>
    <string name="pref_key_fq">FQ</string>
    <string name="default_fq">地圖集二分區</string>
    <string name="pref_title_fq">分區方案</string>
    <string name="pref_title_font">字體</string>
    <string name="pref_key_font">FONT</string>
    <string name="hz_range">漢字檢索範圍</string>
    <string name="long_text_ipa">長文本注音</string>
    <string name="zdic">漢典</string>
    <string name="zisea">字海</string>
    <string name="zitools">字統網</string>
    <string name="unihan">Unihan</string>
    <string name="online_dict">去在線字典查字</string>
    <string name="moedict">萌典</string>
    <string name="kangxi">康熙字典</string>
    <string name="chise">CHISE</string>
    <string name="guess_hz_answer">💡答案</string>
    <string name="random">隨機</string>
    <string name="new_guess_game">出題</string>
    <string name="guess_lang_lang_hint">選擇或輸入猜測的語言</string>
    <string name="guess_lang_hint">請輸入漢字</string>
    <string name="guess_lang_instructions">根據指定漢字的讀音或相對地理位置猜方言</string>
    <string name="guess_lang">🕹️猜方言</string>
    <string name="area_capital">省會</string>
    <string name="area_province">省級</string>
    <string name="area_city">地級</string>
    <string name="area_county">縣級</string>
    <string name="guess_diameter">距離</string>
    <string name="guess_copy">📋分享</string>
    <string name="guess_area">🌏猜區域</string>
    <string name="hint_direction">↗️提示方向</string>
    <string name="hint_distance">🔢提示里數</string>
    <string name="guess_division">方言片</string>
    <string name="guess_sub_division">方言小片</string>
    <string name="island_history">方言島/歷史音</string>
    <string name="option_island_only">僅方言島</string>
    <string name="option_island_hide">隱藏方言島</string>
    <string name="option_history_only">僅歷史音</string>
    <string name="option_history_hide">隱藏歷史音</string>
    <string name="option_both_island_history">不限</string>
</resources>