<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_item_settings"
        app:showAsAction="never"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/settings" />
    <item
        android:id="@+id/menu_item_home"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_item_info"
        android:title="@string/info"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_item_favorite"
        android:title="@string/favorite"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_item_guess_hz"
        android:title="@string/guess_hz"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_item_guess_lang"
        android:title="@string/guess_lang"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_item_sim"
        android:title="@string/similarity"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_item_help"
        app:showAsAction="never"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/help" />
    <item
        android:id="@+id/menu_item_about"
        app:showAsAction="never"
        android:title="@string/about" />
</menu>
