<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_size">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Spinner
            android:id="@+id/spinner_provinces"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2" />
        <Spinner
            android:id="@+id/spinner_divisions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3" />
        <Button
            android:id="@+id/buttonNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_guess_game" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editTextInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="5"
            android:hint="@string/guess_lang_hint"
            android:importantForAutofill="no"
            android:inputType="text"
            android:imeOptions="actionDone"
            android:singleLine="true" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_search_lang"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <AutoCompleteTextView
                android:id="@+id/text_search_lang"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:completionThreshold="0"
                android:hint="@string/guess_lang_lang_hint"
                android:singleLine="true"
                android:paddingStart="0dp"
                android:paddingEnd="@dimen/button_icon_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/button_lang_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_spinner_caret"
                android:importantForAccessibility="no"
                app:layout_constraintBottom_toBottomOf="@id/text_search_lang"
                app:layout_constraintEnd_toEndOf="@id/text_search_lang"
                app:layout_constraintTop_toTopOf="@id/text_search_lang" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
    <ScrollView
        android:id="@+id/scrollViewIPA"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewIPA"
                style="@style/FontDetail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="" />
        </LinearLayout>
    </ScrollView>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView"
                style="@style/FontDetail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/guess_lang_instructions" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
